fix(header): Hide the user name on mobile screen

--- a/style.css
+++ b/style.css
@@ -673,6 +673,22 @@ ul {
   display: inline-block;
 }
 
+@media (max-width: 768px) {
+  .nav-wrapper .hide-on-mobile {
+    border: 0;
+    clip: rect(0 0 0 0);
+    -webkit-clip-path: inset(50%);
+    clip-path: inset(50%);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap;
+  }
+}
+
 .nav-wrapper .menu-button {
   background: none;
   border: 0;
